# prayer-times

./: .gitignore  .tmuxinator.yml  CLAUDE.md  Cargo.toml  PKGBUILD  README.md  devenv.nix  devenv.yaml  justfile  shell.nix
src/: arguments.rs  calculations.rs  cli.rs  config.rs  daemon.rs  event.rs  location.rs  madhab.rs  main.rs  method.rs  notification.rs  notification_urgency.rs  old.rs  prayer.rs  prayers.rs  time.rs
src/arguments/: generation.rs
src/calculations/: math.rs  mod.rs
src/prayers/: arguments.rs  calculations.rs
