[package]
name = "prayer-times"
description = "Islamic Prayer Times Notification"
version = "0.1.0"
authors = ["Ilyas Turki"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.14", features = ["derive"] }
notify-rust = "4.10.0"
strum = "0.25.0"
strum_macros = "0.25.3"
