[package]
name = "prayer-times"
version = "0.3.1"
authors = ["Ilyas Turki <turki.ilyass@gmail.com>"]
edition = "2021"
description = "Islamic Prayer Times Informations and Notifications"
readme = "README.md"
homepage = "https://github.com/Yasso9/prayer-times"
repository = "https://github.com/Yasso9/prayer-times"
license = "MIT"
exclude = ["/PKGBUILD"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.14", features = ["derive"] }
clap_complete = "4.5.1"
confy = "0.6.1"
geolocation = "0.2.1"
get_if_addrs = "0.5.3"
notify-rust = "4.10.0"
serde = "1.0.196"
strum = "0.25.0"
strum_macros = "0.25.3"
toml = "0.8.10"
